# mlops2025w_142502005

./: .gitignore  BasicRAG.ipynb  README.md
assignment/142502005-assignment4/: README.md  benchmark_results.csv  mysql_results.csv  pyproject.toml
assignment/142502005-assignment4/data/: customers.csv  invoices.csv  products.csv
assignment/142502005-assignment4/src/: atlas.py  dataPrep.py  mongoBench.py  mongoDb.py  mySql.py  mySqlBench.py
assignment/142502005-assignment5/: 142502005_mlopsAssignment5.ipynb
assignment/git-assignment-142502005/: README.md  (+2 more)
class/: output.txt  week3.sh  week3_rev1.sh
project/: .env  .gitignore  Dockerfile  README.md  evaluation.py  main.py  promote_best_config.py  pyproject.toml  requirements.txt  run_sweep.py  test.py
project/.huggingface/: space.yaml
project/app/: main.py  ui.py
project/docs/: usage.md
project/eval/: evaluate_rag.py
project/logs/: errors.jsonl  interactions.jsonl
project/multi_doc_chat/prompts/: prompt_library.py
project/multi_doc_chat/src/: pdfLoader.py  utils.py
project/multi_doc_chat/src/document_ingestion/: data_ingestion.py
project/notebook/: BasicRAG.ipynb  RAG.ipynb
project/quiz/: db_init.py  evaluation.py  loadwandb.py  qn_gen.py  retrive.py
project/rag/: chain.py  config.py  embeddings.py  generator.py  ingestion.py  prompts.py  retriever.py  splitting.py  tasks.py  vectordb.py
project/scripts/: build_index.py  refresh_index.py
project/src/: pdfExtractor.py  pdfLoader.py
project/tests/: test_chain_smoke.py  test_ingestion.py  test_retrieval.py
project/utils/: logging_utils.py
(+20 files in other folders)
